--- a/companies.html
+++ b/companies.html
@@ -13,16 +13,38 @@
 </head>
 
 <body>
-    <!-- loader -->
+   <!-- loader -->
     <div class="preloader">
         <div class="preloaderImg"></div>
+    </div>
+    <!-- search layer -->
+    <div class="layer"></div>
+    <!-- search container -->
+    <div class="search-container">
+        <div class="inner-contianer">
+            <form action="" class="container">
+                <div class="row justify-content-center">
+                    <div class="col-12 d-flex justify-content-end">
+                        <a href="javascript: void(0)" class="closeSearch">
+                            <i class="fa-light fa-xmark"></i>
+                        </a>
+                    </div>
+                    <div class="input-field col-lg-8 col-11">
+                        <div class="form">
+                            <input type="text" id="search" name="search" placeholder="SEARCH">
+                            <button type="submit"><i class="fa-light fa-magnifying-glass"></i></button>
+                        </div>
+                    </div>
+                </div>
+            </form>
+        </div>
     </div>
     <!-- header -->
     <header>
         <!-- nav bar menu -->
         <nav class="container">
             <a href="index.html" class="logo">
-                <img src="assets/images/logo.svg" alt="logo">
+                <img loading="lazy" src="assets/images/logo.svg" alt="logo">
             </a>
             <ul class="nav-links">
                 <li>
@@ -40,6 +62,13 @@
             </ul>
             <ul class="util">
                 <li>
+                    <a id="searchOpen">
+                        <span>
+                            <i class="fa-regular fa-magnifying-glass"></i>
+                        </span>
+                    </a>
+                </li>
+                <li>
                     <div id="showNotification">
                         <small class="count">2</small>
                         <span>
@@ -52,7 +81,7 @@
                             <ul>
                                 <li>
                                     <div class="img">
-                                        <img src="assets/images/no1.png" alt="">
+                                        <img loading="lazy" src="assets/images/no1.png" alt="">
                                     </div>
                                     <div class="content">
                                         <h6>System</h6>
@@ -62,7 +91,7 @@
                                 </li>
                                 <li>
                                     <div class="img">
-                                        <img src="assets/images/no1.png" alt="">
+                                        <img loading="lazy" src="assets/images/no1.png" alt="">
                                     </div>
                                     <div class="content">
                                         <h6>System</h6>
@@ -72,7 +101,7 @@
                                 </li>
                                 <li>
                                     <div class="img">
-                                        <img src="assets/images/no1.png" alt="">
+                                        <img loading="lazy" src="assets/images/no1.png" alt="">
                                     </div>
                                     <div class="content">
                                         <h6>System</h6>
@@ -82,7 +111,7 @@
                                 </li>
                                 <li>
                                     <div class="img">
-                                        <img src="assets/images/no1.png" alt="">
+                                        <img loading="lazy" src="assets/images/no1.png" alt="">
                                     </div>
                                     <div class="content">
                                         <h6>System</h6>
@@ -92,7 +121,7 @@
                                 </li>
                                 <li>
                                     <div class="img">
-                                        <img src="assets/images/no1.png" alt="">
+                                        <img loading="lazy" src="assets/images/no1.png" alt="">
                                     </div>
                                     <div class="content">
                                         <h6>System</h6>
@@ -104,10 +133,100 @@
                         </div>
                     </div>
                 </li>
-                <li>
-                    <a href="login.html" class="login">
+                <li id="showProfile">
+                    <a class="login">
                         <i class="fa-duotone fa-user"></i>
                     </a>
+                    <div class="profile_menu">
+                        <!-- individual profile -->
+                        <div class="profile_wrapper">
+                            <div class="profile">
+                                <div class="img">
+                                    <img loading="lazy" src="assets/images/friend-12.jpg" alt="">
+                                </div>
+                                <div class="text">
+                                    <h6>Mahmoud Elkomy</h6>
+                                    <p>+9660123456789</p>
+                                </div>
+                            </div>
+                            <ul>
+                                <li>
+                                    <a href="individual-signup.html">
+                                        <div>
+                                            <span>
+                                                <img loading="lazy" src="assets/images/editAccount.svg" alt="edit">
+                                            </span> Edit Account
+                                        </div>
+                                        <i class="fa-light fa-angle-right"></i>
+                                    </a>
+                                </li>
+                                <li>
+                                    <a href="create-resume.html">
+                                        <div>
+                                            <span>
+                                                <img loading="lazy" src="assets/images/addCv.svg" alt="edit">
+                                            </span> Add Resume
+                                        </div>
+                                        <i class="fa-light fa-angle-right"></i>
+                                    </a>
+                                </li>
+                            </ul>
+                        </div>
+                        <!-- company profile -->
+                        <div class="profile_wrapper">
+                            <div class="profile">
+                                <div class="img">
+                                    <img loading="lazy" class="logo_contain" src="assets/images/no4.png" alt="">
+                                </div>
+                                <div class="text">
+                                    <h6>Mahmoud Elkomy</h6>
+                                    <p>+9660123456789</p>
+                                </div>
+                            </div>
+                            <ul>
+                                <li>
+                                    <a href="company-signup.html">
+                                        <div>
+                                            <span>
+                                                <img loading="lazy" src="assets/images/editAccount.svg" alt="edit">
+                                            </span> Edit Account
+                                        </div>
+                                        <i class="fa-light fa-angle-right"></i>
+                                    </a>
+                                </li>
+                                <li>
+                                    <a href="resumes.html">
+                                        <div>
+                                            <span>
+                                                <img loading="lazy" src="assets/images/resumes.svg" alt="edit">
+                                            </span> Resumes
+                                        </div>
+                                        <i class="fa-light fa-angle-right"></i>
+                                    </a>
+                                </li>
+                                <li>
+                                    <a href="create-resume.html">
+                                        <div>
+                                            <span>
+                                                <img loading="lazy" src="assets/images/addCv.svg" alt="edit">
+                                            </span> Add Resume
+                                        </div>
+                                        <i class="fa-light fa-angle-right"></i>
+                                    </a>
+                                </li>
+                                <li>
+                                    <a href="pricing-plans.html">
+                                        <div>
+                                            <span>
+                                                <img loading="lazy" src="assets/images/plans.svg" alt="plans">
+                                            </span> Pricing Plans
+                                        </div>
+                                        <i class="fa-light fa-angle-right"></i>
+                                    </a>
+                                </li>
+                            </ul>
+                        </div>
+                    </div>
                 </li>
                 <li class="toggler">
                     <span>
@@ -118,29 +237,28 @@
             </ul>
         </nav>
         <!-- search wrapper -->
-        <div class="search_wrapper">
+        <!-- <div class="search_wrapper">
             <div class="container">
                 <form action="">
                     <div class="search_field">
                         <button>
-                            <img src="assets/images/searchIcon.svg" alt="">
+                            <img loading="lazy" src="assets/images/searchIcon.svg" alt="">
                         </button>
                         <input type="text" placeholder="Search for employees...">
                     </div>
                 </form>
             </div>
-        </div>
+        </div> -->
     </header>
     <!-- main wrapper -->
     <main>
         <section class="companies">
             <div class="container">
                 <div class="row m-0">
-
                     <div class="col-lg-2 col-md-3 col-6 p-2">
                         <a href="company-profile.html" class="company_card company">
                             <div class="img">
-                                <img src="assets/images/no4.png" alt="">
+                                <img loading="lazy" src="assets/images/no4.png" alt="">
                             </div>
                             <h6>Platinum</h6>
                         </a>
@@ -148,7 +266,7 @@
                     <div class="col-lg-2 col-md-3 col-6 p-2">
                         <a href="company-profile.html" class="company_card company">
                             <div class="img">
-                                <img src="assets/images/no3.png" alt="">
+                                <img loading="lazy" src="assets/images/no3.png" alt="">
                             </div>
                             <h6>Rawafed</h6>
                         </a>
@@ -156,7 +274,7 @@
                     <div class="col-lg-2 col-md-3 col-6 p-2">
                         <a href="company-profile.html" class="company_card company">
                             <div class="img">
-                                <img src="assets/images/no5.png" alt="">
+                                <img loading="lazy" src="assets/images/no5.png" alt="">
                             </div>
                             <h6>Aljwhara</h6>
                         </a>
@@ -165,7 +283,7 @@
 
                         <a href="company-profile.html" class="company_card company">
                             <div class="img">
-                                <img src="assets/images/no6.png" alt="">
+                                <img loading="lazy" src="assets/images/no6.png" alt="">
                             </div>
                             <h6>Nesma</h6>
                         </a>
@@ -173,7 +291,7 @@
                     <div class="col-lg-2 col-md-3 col-6 p-2">
                         <a href="company-profile.html" class="company_card company">
                             <div class="img">
-                                <img src="assets/images/w2.png" alt="">
+                                <img loading="lazy" src="assets/images/w2.png" alt="">
                             </div>
                             <h6>Taraf</h6>
                         </a>
@@ -181,7 +299,7 @@
                     <div class="col-lg-2 col-md-3 col-6 p-2">
                         <a href="company-profile.html" class="company_card company">
                             <div class="img">
-                                <img src="assets/images/no4.png" alt="">
+                                <img loading="lazy" src="assets/images/no4.png" alt="">
                             </div>
                             <h6>Platinum</h6>
                         </a>
@@ -189,7 +307,7 @@
                     <div class="col-lg-2 col-md-3 col-6 p-2">
                         <a href="company-profile.html" class="company_card company">
                             <div class="img">
-                                <img src="assets/images/no3.png" alt="">
+                                <img loading="lazy" src="assets/images/no3.png" alt="">
                             </div>
                             <h6>Rawafed</h6>
                         </a>
@@ -197,7 +315,7 @@
                     <div class="col-lg-2 col-md-3 col-6 p-2">
                         <a href="company-profile.html" class="company_card company">
                             <div class="img">
-                                <img src="assets/images/no5.png" alt="">
+                                <img loading="lazy" src="assets/images/no5.png" alt="">
                             </div>
                             <h6>Aljwhara</h6>
                         </a>
@@ -205,7 +323,7 @@
                     <div class="col-lg-2 col-md-3 col-6 p-2">
                         <a href="company-profile.html" class="company_card company">
                             <div class="img">
-                                <img src="assets/images/no6.png" alt="">
+                                <img loading="lazy" src="assets/images/no6.png" alt="">
                             </div>
                             <h6>Nesma</h6>
                         </a>
@@ -213,7 +331,7 @@
                     <div class="col-lg-2 col-md-3 col-6 p-2">
                         <a href="company-profile.html" class="company_card company">
                             <div class="img">
-                                <img src="assets/images/w2.png" alt="">
+                                <img loading="lazy" src="assets/images/w2.png" alt="">
                             </div>
                             <h6>Taraf</h6>
                         </a>
@@ -221,7 +339,7 @@
                     <div class="col-lg-2 col-md-3 col-6 p-2">
                         <a href="company-profile.html" class="company_card company">
                             <div class="img">
-                                <img src="assets/images/no6.png" alt="">
+                                <img loading="lazy" src="assets/images/no6.png" alt="">
                             </div>
                             <h6>Nesma</h6>
                         </a>
@@ -229,7 +347,7 @@
                     <div class="col-lg-2 col-md-3 col-6 p-2">
                         <a href="company-profile.html" class="company_card company">
                             <div class="img">
-                                <img src="assets/images/w2.png" alt="">
+                                <img loading="lazy" src="assets/images/w2.png" alt="">
                             </div>
                             <h6>Taraf</h6>
                         </a>
@@ -247,7 +365,7 @@
                     <div class="about_company">
                         <div class="logo">
                             <a href="index.html">
-                                <img src="assets/images/logo.svg" alt="logo">
+                                <img loading="lazy" src="assets/images/logo.svg" alt="logo">
                             </a>
                         </div>
                         <div class="text">
