--- a/about-us.html
+++ b/about-us.html
@@ -17,28 +17,57 @@
     <div class="preloader">
         <div class="preloaderImg"></div>
     </div>
+    <!-- search layer -->
+    <div class="layer"></div>
+    <!-- search container -->
+    <div class="search-container">
+        <div class="inner-contianer">
+            <form action="" class="container">
+                <div class="row justify-content-center">
+                    <div class="col-12 d-flex justify-content-end">
+                        <a href="javascript: void(0)" class="closeSearch">
+                            <i class="fa-light fa-xmark"></i>
+                        </a>
+                    </div>
+                    <div class="input-field col-lg-8 col-11">
+                        <div class="form">
+                            <input type="text" id="search" name="search" placeholder="SEARCH">
+                            <button type="submit"><i class="fa-light fa-magnifying-glass"></i></button>
+                        </div>
+                    </div>
+                </div>
+            </form>
+        </div>
+    </div>
     <!-- header -->
     <header>
         <!-- nav bar menu -->
         <nav class="container">
             <a href="index.html" class="logo">
-                <img src="assets/images/logo.svg" alt="logo">
+                <img loading="lazy" src="assets/images/logo.svg" alt="logo">
             </a>
             <ul class="nav-links">
                 <li>
-                    <a href="index.html">Home</a>
+                    <a href="index.html" class="active">Home</a>
                 </li>
                 <li>
                     <a href="explore.html">Explore</a>
                 </li>
                 <li>
-                    <a href="about-us.html" class="active">About Us</a>
+                    <a href="about-us.html">About Us</a>
                 </li>
                 <li>
                     <a href="contact-us.html">Contact Us</a>
                 </li>
             </ul>
             <ul class="util">
+                <li>
+                    <a id="searchOpen">
+                        <span>
+                            <i class="fa-regular fa-magnifying-glass"></i>
+                        </span>
+                    </a>
+                </li>
                 <li>
                     <div id="showNotification">
                         <small class="count">2</small>
@@ -52,7 +81,7 @@
                             <ul>
                                 <li>
                                     <div class="img">
-                                        <img src="assets/images/no1.png" alt="">
+                                        <img loading="lazy" src="assets/images/no1.png" alt="">
                                     </div>
                                     <div class="content">
                                         <h6>System</h6>
@@ -62,7 +91,7 @@
                                 </li>
                                 <li>
                                     <div class="img">
-                                        <img src="assets/images/no1.png" alt="">
+                                        <img loading="lazy" src="assets/images/no1.png" alt="">
                                     </div>
                                     <div class="content">
                                         <h6>System</h6>
@@ -72,7 +101,7 @@
                                 </li>
                                 <li>
                                     <div class="img">
-                                        <img src="assets/images/no1.png" alt="">
+                                        <img loading="lazy" src="assets/images/no1.png" alt="">
                                     </div>
                                     <div class="content">
                                         <h6>System</h6>
@@ -82,7 +111,7 @@
                                 </li>
                                 <li>
                                     <div class="img">
-                                        <img src="assets/images/no1.png" alt="">
+                                        <img loading="lazy" src="assets/images/no1.png" alt="">
                                     </div>
                                     <div class="content">
                                         <h6>System</h6>
@@ -92,7 +121,7 @@
                                 </li>
                                 <li>
                                     <div class="img">
-                                        <img src="assets/images/no1.png" alt="">
+                                        <img loading="lazy" src="assets/images/no1.png" alt="">
                                     </div>
                                     <div class="content">
                                         <h6>System</h6>
@@ -113,7 +142,7 @@
                         <div class="profile_wrapper">
                             <div class="profile">
                                 <div class="img">
-                                    <img src="assets/images/friend-12.jpg" alt="">
+                                    <img loading="lazy" src="assets/images/friend-12.jpg" alt="">
                                 </div>
                                 <div class="text">
                                     <h6>Mahmoud Elkomy</h6>
@@ -125,7 +154,7 @@
                                     <a href="individual-signup.html">
                                         <div>
                                             <span>
-                                                <img src="assets/images/editAccount.svg" alt="edit">
+                                                <img loading="lazy" src="assets/images/editAccount.svg" alt="edit">
                                             </span> Edit Account
                                         </div>
                                         <i class="fa-light fa-angle-right"></i>
@@ -135,7 +164,7 @@
                                     <a href="create-resume.html">
                                         <div>
                                             <span>
-                                                <img src="assets/images/addCv.svg" alt="edit">
+                                                <img loading="lazy" src="assets/images/addCv.svg" alt="edit">
                                             </span> Add Resume
                                         </div>
                                         <i class="fa-light fa-angle-right"></i>
@@ -147,7 +176,7 @@
                         <div class="profile_wrapper">
                             <div class="profile">
                                 <div class="img">
-                                    <img class="logo_contain" src="assets/images/no4.png" alt="">
+                                    <img loading="lazy" class="logo_contain" src="assets/images/no4.png" alt="">
                                 </div>
                                 <div class="text">
                                     <h6>Mahmoud Elkomy</h6>
@@ -159,7 +188,7 @@
                                     <a href="company-signup.html">
                                         <div>
                                             <span>
-                                                <img src="assets/images/editAccount.svg" alt="edit">
+                                                <img loading="lazy" src="assets/images/editAccount.svg" alt="edit">
                                             </span> Edit Account
                                         </div>
                                         <i class="fa-light fa-angle-right"></i>
@@ -169,7 +198,7 @@
                                     <a href="resumes.html">
                                         <div>
                                             <span>
-                                                <img src="assets/images/resumes.svg" alt="edit">
+                                                <img loading="lazy" src="assets/images/resumes.svg" alt="edit">
                                             </span> Resumes
                                         </div>
                                         <i class="fa-light fa-angle-right"></i>
@@ -179,7 +208,7 @@
                                     <a href="create-resume.html">
                                         <div>
                                             <span>
-                                                <img src="assets/images/addCv.svg" alt="edit">
+                                                <img loading="lazy" src="assets/images/addCv.svg" alt="edit">
                                             </span> Add Resume
                                         </div>
                                         <i class="fa-light fa-angle-right"></i>
@@ -189,7 +218,7 @@
                                     <a href="pricing-plans.html">
                                         <div>
                                             <span>
-                                                <img src="assets/images/plans.svg" alt="plans">
+                                                <img loading="lazy" src="assets/images/plans.svg" alt="plans">
                                             </span> Pricing Plans
                                         </div>
                                         <i class="fa-light fa-angle-right"></i>
@@ -208,18 +237,18 @@
             </ul>
         </nav>
         <!-- search wrapper -->
-        <div class="search_wrapper">
+        <!-- <div class="search_wrapper">
             <div class="container">
                 <form action="">
                     <div class="search_field">
                         <button>
-                            <img src="assets/images/searchIcon.svg" alt="">
+                            <img loading="lazy" src="assets/images/searchIcon.svg" alt="">
                         </button>
                         <input type="text" placeholder="Search for employees...">
                     </div>
                 </form>
             </div>
-        </div>
+        </div> -->
     </header>
     <!-- main wrapper -->
     <main>
@@ -246,18 +275,18 @@
                     </div>
                     <div class="col-lg-7 col-md-12 col-sm-12 col-12 pl-200 overflow-hidden">
                         <div class="banner-imgs banner-imgs-about">
-                            <img alt="jobhub" src="assets/images/banner-online-marketing.png"
+                            <img loading="lazy" alt="jobhub" src="assets/images/banner-online-marketing.png"
                                 class="img-responsive main-banner shape-3">
-                            <span class="banner-sm-4"><img alt="jobhub" src="assets/images/congratulation.svg"
+                            <span class="banner-sm-4"><img loading="lazy" alt="jobhub" src="assets/images/congratulation.svg"
                                     class="img-responsive shape-2"></span>
-                            <span class="banner-sm-5"><img alt="jobhub" src="assets/images/web-dev.svg"
+                            <span class="banner-sm-5"><img loading="lazy" alt="jobhub" src="assets/images/web-dev.svg"
                                     class="img-responsive shape-1"></span>
                         </div>
                     </div>
                 </div>
                 <div class="row">
                     <div class="testmonials">
-                        <h3 class="title">Our Happy Customer</h3>
+                        <h3 class="title">Listen To What Our Clients Say</h3>
                         <p class="desc">When it comes to choosing the right web hosting provider, we know how easy it is
                             to get
                             overwhelmed with the number.</p>
@@ -265,7 +294,7 @@
                             <div class="swiper-wrapper">
                                 <div class="swiper-slide">
                                     <div class="testmional-card">
-                                        <img src="assets/images/left-quotes.svg" alt="quotes">
+                                        <img loading="lazy" src="assets/images/left-quotes.svg" alt="quotes">
                                         <div class="d-flex flex-column gap-2">
                                             <div class="rate">
                                                 <ul>
@@ -292,7 +321,7 @@
                                 </div>
                                 <div class="swiper-slide">
                                     <div class="testmional-card">
-                                        <img src="assets/images/left-quotes.svg" alt="quotes">
+                                        <img loading="lazy" src="assets/images/left-quotes.svg" alt="quotes">
                                         <div class="d-flex flex-column gap-2">
                                             <div class="rate">
                                                 <ul>
@@ -319,7 +348,7 @@
                                 </div>
                                 <div class="swiper-slide">
                                     <div class="testmional-card">
-                                        <img src="assets/images/left-quotes.svg" alt="quotes">
+                                        <img loading="lazy" src="assets/images/left-quotes.svg" alt="quotes">
                                         <div class="d-flex flex-column gap-2">
                                             <div class="rate">
                                                 <ul>
@@ -346,7 +375,7 @@
                                 </div>
                                 <div class="swiper-slide">
                                     <div class="testmional-card">
-                                        <img src="assets/images/left-quotes.svg" alt="quotes">
+                                        <img loading="lazy" src="assets/images/left-quotes.svg" alt="quotes">
                                         <div class="d-flex flex-column gap-2">
                                             <div class="rate">
                                                 <ul>
@@ -387,10 +416,10 @@
                 </p>
                 <div class="btns">
                     <a href="#">
-                        <img src="assets/images/app-store.svg" alt="app-store">
+                        <img loading="lazy" src="assets/images/app-store.svg" alt="app-store">
                     </a>
                     <a href="#">
-                        <img src="assets/images/google-play.svg" alt="google-play">
+                        <img loading="lazy" src="assets/images/google-play.svg" alt="google-play">
                     </a>
                 </div>
             </div>
@@ -404,7 +433,7 @@
                     <div class="about_company">
                         <div class="logo">
                             <a href="index.html">
-                                <img src="assets/images/logo.svg" alt="logo">
+                                <img loading="lazy" src="assets/images/logo.svg" alt="logo">
                             </a>
                         </div>
                         <div class="text">
