--- a/resumes.html
+++ b/resumes.html
@@ -17,16 +17,38 @@
     <div class="preloader">
         <div class="preloaderImg"></div>
     </div>
+    <!-- search layer -->
+    <div class="layer"></div>
+    <!-- search container -->
+    <div class="search-container">
+        <div class="inner-contianer">
+            <form action="" class="container">
+                <div class="row justify-content-center">
+                    <div class="col-12 d-flex justify-content-end">
+                        <a href="javascript: void(0)" class="closeSearch">
+                            <i class="fa-light fa-xmark"></i>
+                        </a>
+                    </div>
+                    <div class="input-field col-lg-8 col-11">
+                        <div class="form">
+                            <input type="text" id="search" name="search" placeholder="SEARCH">
+                            <button type="submit"><i class="fa-light fa-magnifying-glass"></i></button>
+                        </div>
+                    </div>
+                </div>
+            </form>
+        </div>
+    </div>
     <!-- header -->
     <header>
         <!-- nav bar menu -->
         <nav class="container">
             <a href="index.html" class="logo">
-                <img src="assets/images/logo.svg" alt="logo">
+                <img loading="lazy" src="assets/images/logo.svg" alt="logo">
             </a>
             <ul class="nav-links">
                 <li>
-                    <a href="index.html">Home</a>
+                    <a href="index.html" class="active">Home</a>
                 </li>
                 <li>
                     <a href="explore.html">Explore</a>
@@ -40,6 +62,13 @@
             </ul>
             <ul class="util">
                 <li>
+                    <a id="searchOpen">
+                        <span>
+                            <i class="fa-regular fa-magnifying-glass"></i>
+                        </span>
+                    </a>
+                </li>
+                <li>
                     <div id="showNotification">
                         <small class="count">2</small>
                         <span>
@@ -52,7 +81,7 @@
                             <ul>
                                 <li>
                                     <div class="img">
-                                        <img src="assets/images/no1.png" alt="">
+                                        <img loading="lazy" src="assets/images/no1.png" alt="">
                                     </div>
                                     <div class="content">
                                         <h6>System</h6>
@@ -62,7 +91,7 @@
                                 </li>
                                 <li>
                                     <div class="img">
-                                        <img src="assets/images/no1.png" alt="">
+                                        <img loading="lazy" src="assets/images/no1.png" alt="">
                                     </div>
                                     <div class="content">
                                         <h6>System</h6>
@@ -72,7 +101,7 @@
                                 </li>
                                 <li>
                                     <div class="img">
-                                        <img src="assets/images/no1.png" alt="">
+                                        <img loading="lazy" src="assets/images/no1.png" alt="">
                                     </div>
                                     <div class="content">
                                         <h6>System</h6>
@@ -82,7 +111,7 @@
                                 </li>
                                 <li>
                                     <div class="img">
-                                        <img src="assets/images/no1.png" alt="">
+                                        <img loading="lazy" src="assets/images/no1.png" alt="">
                                     </div>
                                     <div class="content">
                                         <h6>System</h6>
@@ -92,7 +121,7 @@
                                 </li>
                                 <li>
                                     <div class="img">
-                                        <img src="assets/images/no1.png" alt="">
+                                        <img loading="lazy" src="assets/images/no1.png" alt="">
                                     </div>
                                     <div class="content">
                                         <h6>System</h6>
@@ -104,10 +133,100 @@
                         </div>
                     </div>
                 </li>
-                <li>
-                    <a href="login.html" class="login">
+                <li id="showProfile">
+                    <a class="login">
                         <i class="fa-duotone fa-user"></i>
                     </a>
+                    <div class="profile_menu">
+                        <!-- individual profile -->
+                        <div class="profile_wrapper">
+                            <div class="profile">
+                                <div class="img">
+                                    <img loading="lazy" src="assets/images/friend-12.jpg" alt="">
+                                </div>
+                                <div class="text">
+                                    <h6>Mahmoud Elkomy</h6>
+                                    <p>+9660123456789</p>
+                                </div>
+                            </div>
+                            <ul>
+                                <li>
+                                    <a href="individual-signup.html">
+                                        <div>
+                                            <span>
+                                                <img loading="lazy" src="assets/images/editAccount.svg" alt="edit">
+                                            </span> Edit Account
+                                        </div>
+                                        <i class="fa-light fa-angle-right"></i>
+                                    </a>
+                                </li>
+                                <li>
+                                    <a href="create-resume.html">
+                                        <div>
+                                            <span>
+                                                <img loading="lazy" src="assets/images/addCv.svg" alt="edit">
+                                            </span> Add Resume
+                                        </div>
+                                        <i class="fa-light fa-angle-right"></i>
+                                    </a>
+                                </li>
+                            </ul>
+                        </div>
+                        <!-- company profile -->
+                        <div class="profile_wrapper">
+                            <div class="profile">
+                                <div class="img">
+                                    <img loading="lazy" class="logo_contain" src="assets/images/no4.png" alt="">
+                                </div>
+                                <div class="text">
+                                    <h6>Mahmoud Elkomy</h6>
+                                    <p>+9660123456789</p>
+                                </div>
+                            </div>
+                            <ul>
+                                <li>
+                                    <a href="company-signup.html">
+                                        <div>
+                                            <span>
+                                                <img loading="lazy" src="assets/images/editAccount.svg" alt="edit">
+                                            </span> Edit Account
+                                        </div>
+                                        <i class="fa-light fa-angle-right"></i>
+                                    </a>
+                                </li>
+                                <li>
+                                    <a href="resumes.html">
+                                        <div>
+                                            <span>
+                                                <img loading="lazy" src="assets/images/resumes.svg" alt="edit">
+                                            </span> Resumes
+                                        </div>
+                                        <i class="fa-light fa-angle-right"></i>
+                                    </a>
+                                </li>
+                                <li>
+                                    <a href="create-resume.html">
+                                        <div>
+                                            <span>
+                                                <img loading="lazy" src="assets/images/addCv.svg" alt="edit">
+                                            </span> Add Resume
+                                        </div>
+                                        <i class="fa-light fa-angle-right"></i>
+                                    </a>
+                                </li>
+                                <li>
+                                    <a href="pricing-plans.html">
+                                        <div>
+                                            <span>
+                                                <img loading="lazy" src="assets/images/plans.svg" alt="plans">
+                                            </span> Pricing Plans
+                                        </div>
+                                        <i class="fa-light fa-angle-right"></i>
+                                    </a>
+                                </li>
+                            </ul>
+                        </div>
+                    </div>
                 </li>
                 <li class="toggler">
                     <span>
@@ -118,18 +237,18 @@
             </ul>
         </nav>
         <!-- search wrapper -->
-        <div class="search_wrapper">
+        <!-- <div class="search_wrapper">
             <div class="container">
                 <form action="">
                     <div class="search_field">
                         <button>
-                            <img src="assets/images/searchIcon.svg" alt="">
+                            <img loading="lazy" src="assets/images/searchIcon.svg" alt="">
                         </button>
                         <input type="text" placeholder="Search for employees...">
                     </div>
                 </form>
             </div>
-        </div>
+        </div> -->
     </header>
     <!-- main wrapper -->
     <main>
@@ -147,7 +266,7 @@
                                     </p>
                                 </div>
                                 <div class="avatar">
-                                    <img src="assets/images/individ.png" alt="">
+                                    <img loading="lazy" src="assets/images/individ.png" alt="">
                                 </div>
                             </div>
                         </a>
@@ -161,7 +280,7 @@
                     <div class="col-lg-4 col-md-6 col-12 p-2">
                         <a href="profile.html" class="profile_card">
                             <div class="img">
-                                <img src="assets/images/friend-7.jpg" alt="">
+                                <img loading="lazy" src="assets/images/friend-7.jpg" alt="">
                             </div>
                             <div class="owner">
                                 <h6>Mahmoud Elkomy</h6>
@@ -172,10 +291,10 @@
                             </div>
                             <div class="buttons">
                                 <button>
-                                    <img src="assets/images/edit.svg" alt="">
+                                    <img loading="lazy" src="assets/images/edit.svg" alt="">
                                 </button>
                                 <button>
-                                    <img src="assets/images/trash.svg" alt="">
+                                    <img loading="lazy" src="assets/images/trash.svg" alt="">
                                 </button>
                             </div>
                         </a>
@@ -183,7 +302,7 @@
                     <div class="col-lg-4 col-md-6 col-12 p-2">
                         <a href="profile.html" class="profile_card">
                             <div class="img">
-                                <img src="assets/images/friend-8.jpg" alt="">
+                                <img loading="lazy" src="assets/images/friend-8.jpg" alt="">
                             </div>
                             <div class="owner">
                                 <h6>Hassan Ibrahim</h6>
@@ -194,10 +313,10 @@
                             </div>
                             <div class="buttons">
                                 <button>
-                                    <img src="assets/images/edit.svg" alt="">
+                                    <img loading="lazy" src="assets/images/edit.svg" alt="">
                                 </button>
                                 <button>
-                                    <img src="assets/images/trash.svg" alt="">
+                                    <img loading="lazy" src="assets/images/trash.svg" alt="">
                                 </button>
                             </div>
                         </a>
@@ -205,7 +324,7 @@
                     <div class="col-lg-4 col-md-6 col-12 p-2">
                         <a href="profile.html" class="profile_card">
                             <div class="img">
-                                <img src="assets/images/friend-12.jpg" alt="">
+                                <img loading="lazy" src="assets/images/friend-12.jpg" alt="">
                             </div>
                             <div class="owner">
                                 <h6>Mahmoud Elkomy</h6>
@@ -216,10 +335,10 @@
                             </div>
                             <div class="buttons">
                                 <button>
-                                    <img src="assets/images/edit.svg" alt="">
+                                    <img loading="lazy" src="assets/images/edit.svg" alt="">
                                 </button>
                                 <button>
-                                    <img src="assets/images/trash.svg" alt="">
+                                    <img loading="lazy" src="assets/images/trash.svg" alt="">
                                 </button>
                             </div>
                         </a>
@@ -227,7 +346,7 @@
                     <div class="col-lg-4 col-md-6 col-12 p-2">
                         <a href="profile.html" class="profile_card">
                             <div class="img">
-                                <img src="assets/images/friend-5.jpg" alt="">
+                                <img loading="lazy" src="assets/images/friend-5.jpg" alt="">
                             </div>
                             <div class="owner">
                                 <h6>Hala Hassan</h6>
@@ -238,10 +357,10 @@
                             </div>
                             <div class="buttons">
                                 <button>
-                                    <img src="assets/images/edit.svg" alt="">
+                                    <img loading="lazy" src="assets/images/edit.svg" alt="">
                                 </button>
                                 <button>
-                                    <img src="assets/images/trash.svg" alt="">
+                                    <img loading="lazy" src="assets/images/trash.svg" alt="">
                                 </button>
                             </div>
                         </a>
@@ -249,7 +368,7 @@
                     <div class="col-lg-4 col-md-6 col-12 p-2">
                         <a href="profile.html" class="profile_card">
                             <div class="img">
-                                <img src="assets/images/friend-10.jpg" alt="">
+                                <img loading="lazy" src="assets/images/friend-10.jpg" alt="">
                             </div>
                             <div class="owner">
                                 <h6>Hala Hassan</h6>
@@ -260,10 +379,10 @@
                             </div>
                             <div class="buttons">
                                 <button>
-                                    <img src="assets/images/edit.svg" alt="">
+                                    <img loading="lazy" src="assets/images/edit.svg" alt="">
                                 </button>
                                 <button>
-                                    <img src="assets/images/trash.svg" alt="">
+                                    <img loading="lazy" src="assets/images/trash.svg" alt="">
                                 </button>
                             </div>
                         </a>
@@ -271,7 +390,7 @@
                     <div class="col-lg-4 col-md-6 col-12 p-2">
                         <a href="profile.html" class="profile_card">
                             <div class="img">
-                                <img src="assets/images/friend-9.jpg" alt="">
+                                <img loading="lazy" src="assets/images/friend-9.jpg" alt="">
                             </div>
                             <div class="owner">
                                 <h6>Hala Hassan</h6>
@@ -282,10 +401,10 @@
                             </div>
                             <div class="buttons">
                                 <button>
-                                    <img src="assets/images/edit.svg" alt="">
+                                    <img loading="lazy" src="assets/images/edit.svg" alt="">
                                 </button>
                                 <button>
-                                    <img src="assets/images/trash.svg" alt="">
+                                    <img loading="lazy" src="assets/images/trash.svg" alt="">
                                 </button>
                             </div>
                         </a>
@@ -302,7 +421,7 @@
                     <div class="about_company">
                         <div class="logo">
                             <a href="index.html">
-                                <img src="assets/images/logo.svg" alt="logo">
+                                <img loading="lazy" src="assets/images/logo.svg" alt="logo">
                             </a>
                         </div>
                         <div class="text">
